This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: A possible reference leak in the nis module
Type: Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-11-30 06:42 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 10808 merged ZackerySpytz, 2018-11-30 06:44
PR 10809 merged miss-islington, 2018-11-30 07:40
PR 10810 merged miss-islington, 2018-11-30 07:40
PR 10811 merged miss-islington, 2018-11-30 07:40
Messages (5)
msg330747 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-11-30 06:42
In nis_maps(), the result of PyUnicode_FromString() is leaked if the PyList_Append() call fails.
msg330756 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-11-30 07:40
New changeset a2e3585e79c93b2372dbad46a744e28fcc6dad6d by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-35356: Fix a possible reference leak in nis.maps(). (GH-10808)
https://github.com/python/cpython/commit/a2e3585e79c93b2372dbad46a744e28fcc6dad6d
msg330758 - (view) Author: miss-islington (miss-islington) Date: 2018-11-30 07:59
New changeset 3473ca424142cb8f1453ba802ba642060b5ce779 by Miss Islington (bot) in branch '3.6':
bpo-35356: Fix a possible reference leak in nis.maps(). (GH-10808)
https://github.com/python/cpython/commit/3473ca424142cb8f1453ba802ba642060b5ce779
msg330759 - (view) Author: miss-islington (miss-islington) Date: 2018-11-30 08:00
New changeset e604b6c53e7dce6d4cf52525f4ae57352d489cba by Miss Islington (bot) in branch '3.7':
bpo-35356: Fix a possible reference leak in nis.maps(). (GH-10808)
https://github.com/python/cpython/commit/e604b6c53e7dce6d4cf52525f4ae57352d489cba
msg330760 - (view) Author: miss-islington (miss-islington) Date: 2018-11-30 08:04
New changeset f3fe21a3cacbc5d13c3e61cefb36ce0efe617cd7 by Miss Islington (bot) in branch '2.7':
bpo-35356: Fix a possible reference leak in nis.maps(). (GH-10808)
https://github.com/python/cpython/commit/f3fe21a3cacbc5d13c3e61cefb36ce0efe617cd7
History
Date User Action Args
2022-04-11 14:59:08adminsetgithub: 79537
2018-11-30 08:08:58serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-11-30 08:04:45miss-islingtonsetmessages: + msg330760
2018-11-30 08:00:09miss-islingtonsetmessages: + msg330759
2018-11-30 07:59:43miss-islingtonsetnosy: + miss-islington
messages: + msg330758
2018-11-30 07:40:50miss-islingtonsetpull_requests: + pull_request10057
2018-11-30 07:40:40miss-islingtonsetpull_requests: + pull_request10056
2018-11-30 07:40:31miss-islingtonsetpull_requests: + pull_request10055
2018-11-30 07:40:21serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg330756
2018-11-30 06:44:32ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request10054
2018-11-30 06:42:28ZackerySpytzcreate