bpo-35356: Fix a possible reference leak in nis.maps(). (GH-10808) (cherry picked from commit a2e3585e79c93b2372dbad46a744e28fcc6dad6d)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>